--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
       text-align: center;
       background: url(https://i1.wp.com/i.pinimg.com/originals/b1/53/1b/b1531b8d7df182324d8abc70496168f0.jpg);
       font-size: 40px;
-      font-family: Arial, sans-serif;
+      font-family: Mulish;
       color: transparent;
       -webkit-background-clip: text;
+      background-clip: text; /* Добавленное свойство */
+      -webkit-text-fill-color: transparent; /* Добавленное свойство */
     }
 
     .text-line {
@@ -41,30 +43,6 @@
       display: inline-block;
       transform: scaleX(-1);
     }
-
-    .glass-art {
-      position: relative;
-      z-index: 1;
-      display: inline-block;
-      -webkit-text-stroke-width: 1px;
-      -webkit-text-stroke-color: transparent;
-    }
-
-    .glass-art::after {
-      content: attr(data-content);
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      color: inherit;
-      -webkit-text-fill-color: transparent;
-      -webkit-background-clip: text;
-      background-image: inherit;
-      background-position: inherit;
-      background-size: inherit;
-      z-index: -1;
-    }
   </style>
 </head>
 
@@ -75,7 +53,7 @@
         <div class="wrap">
           <div class="inner">
             <div class="text-line">
-              <span class="glass-art" data-content="GLASS ART VER"><span class="reversed-text">RE</span></span>
+              GLASS ART VER<span class="reversed-text">RE</span>
             </div>
             <div class="text-line">
               boutique de decorations et bijoux
